--- a/pages/20013.html
+++ b/pages/20013.html
@@ -528,7 +528,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>The <em>table of Burnside marks</em> (or <em>table of marks</em>, for short) of a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/matrix">matrix</a> indexed by <a class="existingWikiWord" href="/nlab/show/conjugacy+classes">conjugacy classes</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>H</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[H]</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">H \subset G</annotation></semantics></math> whose <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><msub><mi>H</mi> <mi>i</mi></msub><mo stretchy="false">]</mo><mo>,</mo><mo stretchy="false">[</mo><msub><mi>H</mi> <mi>j</mi></msub><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[H_i], [H_j]</annotation></semantics></math>-entry is the <a class="existingWikiWord" href="/nlab/show/cardinality">cardinality</a> of the <a class="existingWikiWord" href="/nlab/show/set">set</a> of <a class="existingWikiWord" href="/nlab/show/fixed+points">fixed points</a> (hence the number of fixed points) of the <a class="existingWikiWord" href="/nlab/show/action">action</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>H</mi> <mi>j</mi></msub></mrow><annotation encoding="application/x-tex">H_j</annotation></semantics></math> on the <a class="existingWikiWord" href="/nlab/show/coset+space">coset space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo stretchy="false">/</mo><msub><mi>H</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">G/H_i</annotation></semantics></math>:</p>
+<p>The <em>table of Burnside marks</em> (or <em>table of marks</em>, for short) of a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/matrix">matrix</a> indexed by <a class="existingWikiWord" href="/nlab/show/conjugacy+classes">conjugacy classes</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>H</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[H]</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">H \subset G</annotation></semantics></math> whose <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mo stretchy="false">[</mo><msub><mi>H</mi> <mi>i</mi></msub><mo stretchy="false">]</mo><mo>,</mo><mo stretchy="false">[</mo><msub><mi>H</mi> <mi>j</mi></msub><mo stretchy="false">]</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">([H_i], [H_j])</annotation></semantics></math>-entry is the <a class="existingWikiWord" href="/nlab/show/cardinality">cardinality</a> of the <a class="existingWikiWord" href="/nlab/show/set">set</a> of <a class="existingWikiWord" href="/nlab/show/fixed+points">fixed points</a> (hence the number of fixed points) of the <a class="existingWikiWord" href="/nlab/show/action">action</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>H</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">H_i</annotation></semantics></math> on the <a class="existingWikiWord" href="/nlab/show/coset+space">coset space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo stretchy="false">/</mo><msub><mi>H</mi> <mi>j</mi></msub></mrow><annotation encoding="application/x-tex">G/H_j</annotation></semantics></math>:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>M</mi> <mrow><mi>i</mi><mi>j</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mrow><mo>|</mo><msup><mrow><mo>(</mo><mi>G</mi><mo stretchy="false">/</mo><msub><mi>H</mi> <mi>j</mi></msub><mo>)</mo></mrow> <mrow><msub><mi>H</mi> <mi>i</mi></msub></mrow></msup><mo>|</mo></mrow><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   M_{i j}
   \;\coloneqq\;
@@ -546,14 +546,14 @@ margin-left: 0em;
 <p><strong>(<a class="existingWikiWord" href="/nlab/show/Burnside+character">Burnside character</a>)</strong></p>
 
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>∈</mo><mi>G</mi><msup><mi>Set</mi> <mi>fin</mi></msup></mrow><annotation encoding="application/x-tex">X \in G Set^{fin}</annotation></semantics></math> any <a class="existingWikiWord" href="/nlab/show/finite+set">finite</a> <a class="existingWikiWord" href="/nlab/show/G-set">G-set</a>, its <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><msub><mi>H</mi> <mi>i</mi></msub><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[H_i]</annotation></semantics></math>-mark</em> is its number <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mrow><mo>|</mo><msup><mi>X</mi> <mrow><msub><mi>H</mi> <mi>i</mi></msub></mrow></msup><mo>|</mo></mrow></mrow><annotation encoding="application/x-tex">\left\vert X^{H_i} \right\vert</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>H</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">H_i</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/fixed+points">fixed points</a>. This construction extends to a <a class="existingWikiWord" href="/nlab/show/ring+homomorphism">ring homomorphism</a></p>
-<div class="maruku-equation" id="eq:BurnsideCharacter"><span class="maruku-eq-number">(1)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mi>ϕ</mi></mtd> <mtd><mo lspace="verythinmathspace">:</mo></mtd> <mtd><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mtd> <mtd><mover><mo>⟶</mo><mi>ϕ</mi></mover></mtd> <mtd><msup><mi>ℤ</mi> <mrow><mi>Conj</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow></msup></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mtd> <mtd><mo>↦</mo></mtd> <mtd><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">[</mo><msub><mi>H</mi> <mi>i</mi></msub><mo stretchy="false">]</mo><mo>↦</mo><mrow><mo>|</mo><msup><mi>X</mi> <mi>H</mi></msup><mo>|</mo></mrow><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation" id="eq:BurnsideCharacter"><span class="maruku-eq-number">(1)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mi>ϕ</mi></mtd> <mtd><mo lspace="verythinmathspace">:</mo></mtd> <mtd><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mtd> <mtd><mover><mo>⟶</mo><mi>ϕ</mi></mover></mtd> <mtd><msup><mi>ℤ</mi> <mrow><mi>Conj</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow></msup></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mtd> <mtd><mo>↦</mo></mtd> <mtd><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">[</mo><mi>H</mi><mo stretchy="false">]</mo><mo>↦</mo><mrow><mo>|</mo><msup><mi>X</mi> <mi>H</mi></msup><mo>|</mo></mrow><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
   
   \array{
     \phi
     &amp;\colon&amp;
     A(G) &amp;\overset{\phi}{\longrightarrow}&amp; \mathbb{Z}^{Conj(G)}
     \\
-    &amp;&amp; [X] &amp;\mapsto&amp; \big( [H_i] \mapsto \left\vert X^H\right\vert\big)
+    &amp;&amp; [X] &amp;\mapsto&amp; \big( [H] \mapsto \left\vert X^H\right\vert\big)
   } 
 
 </annotation></semantics></math></div>
@@ -564,7 +564,7 @@ margin-left: 0em;
 
 <h2 id="properties">Properties</h2>
 
-<p>The following says that the Burnside character plays the same role for finite <a class="existingWikiWord" href="/nlab/show/G-sets">G-sets</a> as <a class="existingWikiWord" href="/nlab/show/group+characters">group characters</a> play for finite-dimensional <a class="existingWikiWord" href="/nlab/show/representations">representations</a>:</p>
+<p>The following says that the Burnside character plays the same role for finite <a class="existingWikiWord" href="/nlab/show/G-sets">G-sets</a> as <a class="existingWikiWord" href="/nlab/show/group+characters">group characters</a> play for finite-dimensional <a class="existingWikiWord" href="/nlab/show/linear+representations">linear representations</a>:</p>
 
 <div class="num_prop" id="BurnsideCharacterIsInjective">
 <h6 id="proposition">Proposition</h6>
@@ -605,12 +605,16 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>
-<p>Götz Pfeiffer, <em>The Subgroups of</em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>M</mi> <mn>24</mn></msub></mrow><annotation encoding="application/x-tex">M_{24}</annotation></semantics></math><em>, or How to Compute the Table of Marks of a Finite Group</em> (<a href="http://schmidt.ucg.ie/~goetz/pub/marks/marks.html">web</a>)</p>
+<li id="Pfeiffer97">
+<p><a class="existingWikiWord" href="/nlab/show/G%C3%B6tz+Pfeiffer">Götz Pfeiffer</a>, <em>The Subgroups of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>M</mi> <mn>24</mn></msub></mrow><annotation encoding="application/x-tex">M_{24}</annotation></semantics></math>, or How to Compute the Table of Marks of a Finite Group</em>, Experiment. Math. 6 (1997), no. 3, 247–270 (<a href="https://doi.org/10.1080/10586458.1997.10504613">doi:10.1080/10586458.1997.10504613</a>, <a href="http://schmidt.ucg.ie/~goetz/pub/marks/marks.html">web</a>)</p>
 </li>
 
 <li>
-<p>Brendan Masterson, Götz Pfeiffer, <em>On the Table of Marks of a Direct Product of Finite Groups</em>, Journal of Algebra Volume 499, 1 April 2018, Pages 610-644 (<a href="https://arxiv.org/abs/1704.03433">arXiv:1704.03433</a>)</p>
+<p>Liam Naughton, <a class="existingWikiWord" href="/nlab/show/G%C3%B6tz+Pfeiffer">Götz Pfeiffer</a>, <em>Computing the table of marks of a cyclic extension</em>, Math. Comp. 81 (2012), no. 280, 2419–2438.</p>
+</li>
+
+<li>
+<p>Brendan Masterson, <a class="existingWikiWord" href="/nlab/show/G%C3%B6tz+Pfeiffer">Götz Pfeiffer</a>, <em>On the Table of Marks of a Direct Product of Finite Groups</em>, Journal of Algebra Volume 499, 1 April 2018, Pages 610-644 (<a href="https://arxiv.org/abs/1704.03433">arXiv:1704.03433</a>)</p>
 </li>
 </ul>
 </body></html>
@@ -619,14 +623,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on December 29, 2018 at 11:15:24.
+  Last revised on December 29, 2018 at 12:56:04.
   See the <a href="https://ncatlab.org/nlab/history/table of marks" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/table+of+marks" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/table+of+marks" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/table+of+marks/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/table+of+marks" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/table+of+marks" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/table of marks/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
