--- a/pages/20014.html
+++ b/pages/20014.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Selcan Aksoy in nLab
+      Götz Pfeiffer in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Selcan Aksoy
+      Götz Pfeiffer
   </h1>
 
 
@@ -294,8 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
-    <a href="https://ncatlab.org/nlab/author/Selcan%20Aksoy" title="Overview of nLab pages which Selcan Aksoy has edited" style="color: black">Pages contributed to</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9399/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -310,33 +309,39 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
 <body>
-<p>Selcan Aksoy was at Florida State University between 2009-2013. She left there in 3rd of July, 2014. She is at Giresun Üniversity now as a research assistant. * <a href="http://matematik.giresun.edu.tr/index.php?id=266">Homepage</a>.</p>
+<ul>
+<li><a href="http://schmidt.ucg.ie/~goetz/">webpage</a></li>
+</ul>
 
-<p>Category: people</p>
-</body></html>
+<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/table+of+marks">table of marks</a></li>
+</ul>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 29, 2018 at 12:36:19.
-  See the <a href="https://ncatlab.org/nlab/history/Selcan Aksoy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on December 29, 2018 at 12:41:57.
+  See the <a href="https://ncatlab.org/nlab/history/Götz Pfeiffer" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Selcan+Aksoy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Selcan+Aksoy/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Selcan+Aksoy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Selcan+Aksoy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Selcan Aksoy/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/G%C3%B6tz+Pfeiffer" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Götz Pfeiffer/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Selcan+Aksoy" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/G%C3%B6tz+Pfeiffer" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Selcan+Aksoy" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/G%C3%B6tz+Pfeiffer" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Selcan+Aksoy" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/G%C3%B6tz+Pfeiffer" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
