--- a/pages/20013.html
+++ b/pages/20013.html
@@ -538,12 +538,14 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
+<p>(see e.g. <a href="#Pfeiffer97">Pfeiffer 97</a>, chapter <em><a href="http://schmidt.ucg.ie/~goetz/pub/marks/node1.html#SECTION00010000000000000000">The Burnside Ring and the Table of Marks</a></em>)</p>
+
 <p>More generally:</p>
 
 <div class="num_defn" id="BurnsideCharacter">
 <h6 id="definition">Definition</h6>
 
-<p><strong>(<a class="existingWikiWord" href="/nlab/show/Burnside+character">Burnside character</a>)</strong></p>
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/Burnside+marks">Burnside marks</a> and <a class="existingWikiWord" href="/nlab/show/Burnside+character">Burnside character</a>)</strong></p>
 
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>∈</mo><mi>G</mi><msup><mi>Set</mi> <mi>fin</mi></msup></mrow><annotation encoding="application/x-tex">X \in G Set^{fin}</annotation></semantics></math> any <a class="existingWikiWord" href="/nlab/show/finite+set">finite</a> <a class="existingWikiWord" href="/nlab/show/G-set">G-set</a>, its <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><msub><mi>H</mi> <mi>i</mi></msub><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[H_i]</annotation></semantics></math>-mark</em> is its number <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mrow><mo>|</mo><msup><mi>X</mi> <mrow><msub><mi>H</mi> <mi>i</mi></msub></mrow></msup><mo>|</mo></mrow></mrow><annotation encoding="application/x-tex">\left\vert X^{H_i} \right\vert</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>H</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">H_i</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/fixed+points">fixed points</a>. This construction extends to a <a class="existingWikiWord" href="/nlab/show/ring+homomorphism">ring homomorphism</a></p>
 <div class="maruku-equation" id="eq:BurnsideCharacter"><span class="maruku-eq-number">(1)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mi>ϕ</mi></mtd> <mtd><mo lspace="verythinmathspace">:</mo></mtd> <mtd><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mtd> <mtd><mover><mo>⟶</mo><mi>ϕ</mi></mover></mtd> <mtd><msup><mi>ℤ</mi> <mrow><mi>Conj</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow></msup></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mtd> <mtd><mo>↦</mo></mtd> <mtd><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">[</mo><mi>H</mi><mo stretchy="false">]</mo><mo>↦</mo><mrow><mo>|</mo><msup><mi>X</mi> <mi>H</mi></msup><mo>|</mo></mrow><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
@@ -564,14 +566,14 @@ margin-left: 0em;
 
 <h2 id="properties">Properties</h2>
 
-<p>The following says that the Burnside character plays the same role for finite <a class="existingWikiWord" href="/nlab/show/G-sets">G-sets</a> as <a class="existingWikiWord" href="/nlab/show/group+characters">group characters</a> play for finite-dimensional <a class="existingWikiWord" href="/nlab/show/linear+representations">linear representations</a>:</p>
+<p>The following says that the Burnside character plays the same role for finite <a class="existingWikiWord" href="/nlab/show/G-sets">G-sets</a> as <a class="existingWikiWord" href="/nlab/show/characters+of+representations">characters of representations</a> play for finite-dimensional <a class="existingWikiWord" href="/nlab/show/linear+representations">linear representations</a>:</p>
 
 <div class="num_prop" id="BurnsideCharacterIsInjective">
 <h6 id="proposition">Proposition</h6>
 
 <p><strong>(<a class="existingWikiWord" href="/nlab/show/Burnside+character">Burnside character</a> is <a class="existingWikiWord" href="/nlab/show/injective+function">injective</a>)</strong></p>
 
-<p>The Burnside character <a class="maruku-eqref" href="#eq:BurnsideCharacter">(1)</a> is <a class="existingWikiWord" href="/nlab/show/injective+function">injective</a>. Hence any two <a class="existingWikiWord" href="/nlab/show/finite+set">finite</a> <a class="existingWikiWord" href="/nlab/show/G-sets">G-sets</a> are <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphic</a> precisely if they have the same Burnside marks.</p>
+<p>The Burnside character <a class="maruku-eqref" href="#eq:BurnsideCharacter">(1)</a> is <a class="existingWikiWord" href="/nlab/show/injective+function">injective</a>. Hence any two <a class="existingWikiWord" href="/nlab/show/finite+set">finite</a> <a class="existingWikiWord" href="/nlab/show/G-sets">G-sets</a> are <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphic</a> precisely if they have the same Burnside marks (Def. <a class="maruku-ref" href="#BurnsideCharacter"></a>).</p>
 </div>
 
 <p>(e.g. <a href="#tomDieck79">tomDieck 79, Prop. 1.2.2</a>, <a href="#tomDieck09">tomDieck 09, Prop. 5.1.1</a>)</p>
@@ -623,7 +625,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 29, 2018 at 12:56:04.
+  Last revised on December 29, 2018 at 13:08:49.
   See the <a href="https://ncatlab.org/nlab/history/table of marks" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
