--- a/pages/7964.html
+++ b/pages/7964.html
@@ -537,7 +537,7 @@ margin-left: 0em;
 
 <p><img src="https://ncatlab.org/nlab/files/HiggsPotentials.png" width="500" /></p>
 
-<p>Curiously, the Higgs <a class="existingWikiWord" href="/nlab/show/potential+energy">potential</a> is such that the Higgs field at this mass is at least close to being at the border between <a class="existingWikiWord" href="/nlab/show/vacuum+stability">vacuum stability</a> and <a class="existingWikiWord" href="/nlab/show/false+vacuum">false vacuum</a>. This was highlighted before the actual measurement (<a href="#EEGHR09">EEGHR 09</a>, <a href="#Gibbs11b">Gibbs 11b</a>):</p>
+<p id="Curiously"> Curiously, the Higgs <a class="existingWikiWord" href="/nlab/show/potential+energy">potential</a> is such that the Higgs field at this mass is at least close to being at the border between <a class="existingWikiWord" href="/nlab/show/vacuum+stability">vacuum stability</a> and <a class="existingWikiWord" href="/nlab/show/false+vacuum">false vacuum</a>. This was highlighted before the actual measurement (<a href="#EEGHR09">EEGHR 09</a>, <a href="#Gibbs11b">Gibbs 11b</a>):</p>
 
 <p><img src="https://ncatlab.org/nlab/files/HiggsVacuumStabilityIII.png" width="700" /></p>
 
@@ -859,14 +859,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 26, 2018 at 07:02:38.
+  Last revised on December 29, 2018 at 15:57:05.
   See the <a href="https://ncatlab.org/nlab/history/Higgs field" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Higgs+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Higgs+field/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/Higgs+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Higgs+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Higgs+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Higgs+field/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/Higgs+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Higgs+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Higgs field/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
