--- a/pages/1788.html
+++ b/pages/1788.html
@@ -316,20 +316,26 @@ margin-left: 0em;
 </tbody></table><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mn>8</mn><mi>m</mi><mo>=</mo><mi>R</mi></mrow><annotation encoding="application/x-tex">
   8 m = R
 
-</annotation></semantics></math></div></body></html>
+</annotation></semantics></math></div>
+<p>\begin{tikzpicture}</p>
+
+<p>\filldraw (0,0) circle (3pt);</p>
+
+<p>\end{tikzpicture}</p>
+</body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 27, 2018 at 16:50:30.
+  Last revised on December 29, 2018 at 17:50:40.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1735" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1735 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1736" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1736 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
