--- a/pages/1788.html
+++ b/pages/1788.html
@@ -319,7 +319,11 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>\begin{tikzpicture}</p>
 
-<p>\filldraw (0,0) circle (3pt);</p>
+<p>\filldraw<a href="0,0">red</a> circle (3pt);</p>
+
+<p>\draw<a href="0,0">red</a> – (3,0);</p>
+
+<p>\filldraw<a href="3,0">red</a> circle (3pt);</p>
 
 <p>\end{tikzpicture}</p>
 </body></html>
@@ -328,14 +332,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 29, 2018 at 17:50:40.
+  Last revised on December 29, 2018 at 18:28:00.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1736" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1736 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1737" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1737 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
