--- a/pages/2682.html
+++ b/pages/2682.html
@@ -875,7 +875,11 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Lara+Anderson">Lara Anderson</a>, <em>New aspects of heterotic geometry and phenomenology</em>, talk at <a href="http://wwwth.mpp.mpg.de/conf/strings2012/">Strings2012</a>, Munich 2012 (<a href="http://wwwth.mpp.mpg.de/members/strings/strings2012/strings_files/program/Talks/Wednesday/Anderson.pdf">pdf</a>)</p>
 </li>
 
-<li id="He18">
+<li id="He18a">
+<p><a class="existingWikiWord" href="/nlab/show/Yang-Hui+He">Yang-Hui He</a>, <em>The Calabi-Yau Landscape: from Geometry, to Physics, to Machine-Learning</em> (<a href="https://arxiv.org/abs/1812.02893">arXiv:1812.02893</a>)</p>
+</li>
+
+<li id="He18b">
 <p><a class="existingWikiWord" href="/nlab/show/Yang-Hui+He">Yang-Hui He</a>, <em>Deep-learning the landscape</em>, talk at <em><a href="https://ims.nus.edu.sg/events/2018/wstring/wk.php">String and M-Theory: The new geometry of the 21st century</a></em> (<a href="https://ims.nus.edu.sg/events/2018/wstring/files/yang.pdf">pdf slides</a>, <a href="https://www.youtube.com/watch?v=x3ThgBgkPlE">video recording</a>)</p>
 </li>
 </ul>
@@ -1157,14 +1161,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 14, 2018 at 04:39:26.
+  Last revised on December 29, 2018 at 18:10:48.
   See the <a href="https://ncatlab.org/nlab/history/landscape of string theory vacua" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/54" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(54 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/landscape of string theory vacua/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
