--- a/pages/1788.html
+++ b/pages/1788.html
@@ -316,30 +316,50 @@ margin-left: 0em;
 </tbody></table><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mn>8</mn><mi>m</mi><mo>=</mo><mi>R</mi></mrow><annotation encoding="application/x-tex">
   8 m = R
 
-</annotation></semantics></math></div>
-<p>\begin{tikzpicture}</p>
-
-<p>\filldraw<a href="0,0">red</a> circle (3pt);</p>
-
-<p>\draw<a href="0,0">red</a> – (3,0);</p>
-
-<p>\filldraw<a href="3,0">red</a> circle (3pt);</p>
-
-<p>\end{tikzpicture}</p>
-</body></html>
+</annotation></semantics></math></div><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="91.415pt" height="6.376pt" viewBox="0 0 91.415 6.376" version="1.1" xmlns="http://www.w3.org/2000/svg">
+<defs>
+<clipPath id="clip1">
+  <path d="M 0 0 L 7 0 L 7 6.375 L 0 6.375 Z M 0 0 "></path>
+</clipPath>
+<clipPath id="clip2">
+  <path d="M 0 0 L 12 0 L 12 6.375 L 0 6.375 Z M 0 0 "></path>
+</clipPath>
+<clipPath id="clip3">
+  <path d="M 85 0 L 91.414062 0 L 91.414062 6.375 L 85 6.375 Z M 85 0 "></path>
+</clipPath>
+<clipPath id="clip4">
+  <path d="M 79 0 L 91.414062 0 L 91.414062 6.375 L 79 6.375 Z M 79 0 "></path>
+</clipPath>
+</defs>
+<g id="surface1">
+<g clip-path="url(#clip1)" clip-rule="nonzero">
+<path style=" stroke:none;fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;" d="M 6.175781 3.1875 C 6.175781 1.539062 4.839844 0.199219 3.1875 0.199219 C 1.539062 0.199219 0.199219 1.539062 0.199219 3.1875 C 0.199219 4.839844 1.539062 6.175781 3.1875 6.175781 C 4.839844 6.175781 6.175781 4.839844 6.175781 3.1875 Z M 6.175781 3.1875 "></path>
+</g>
+<g clip-path="url(#clip2)" clip-rule="nonzero">
+<path style="fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(100%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;" d="M 2.987781 0.0005 C 2.987781 1.648938 1.651844 2.988781 -0.0005 2.988781 C -1.648938 2.988781 -2.988781 1.648938 -2.988781 0.0005 C -2.988781 -1.651844 -1.648938 -2.987781 -0.0005 -2.987781 C 1.651844 -2.987781 2.987781 -1.651844 2.987781 0.0005 Z M 2.987781 0.0005 " transform="matrix(1,0,0,-1,3.188,3.188)"></path>
+</g>
+<path style="fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(100%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;" d="M -0.0005 0.0005 L 85.038562 0.0005 " transform="matrix(1,0,0,-1,3.188,3.188)"></path>
+<g clip-path="url(#clip3)" clip-rule="nonzero">
+<path style=" stroke:none;fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;" d="M 91.21875 3.1875 C 91.21875 1.539062 89.878906 0.199219 88.226562 0.199219 C 86.578125 0.199219 85.238281 1.539062 85.238281 3.1875 C 85.238281 4.839844 86.578125 6.175781 88.226562 6.175781 C 89.878906 6.175781 91.21875 4.839844 91.21875 3.1875 Z M 91.21875 3.1875 "></path>
+</g>
+<g clip-path="url(#clip4)" clip-rule="nonzero">
+<path style="fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(100%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;" d="M 88.03075 0.0005 C 88.03075 1.648938 86.690906 2.988781 85.038562 2.988781 C 83.390125 2.988781 82.050281 1.648938 82.050281 0.0005 C 82.050281 -1.651844 83.390125 -2.987781 85.038562 -2.987781 C 86.690906 -2.987781 88.03075 -1.651844 88.03075 0.0005 Z M 88.03075 0.0005 " transform="matrix(1,0,0,-1,3.188,3.188)"></path>
+</g>
+</g>
+</svg></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 29, 2018 at 18:28:00.
+  Last revised on December 29, 2018 at 19:36:54.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1737" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1737 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1738" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1738 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
