--- a/pages/1788.html
+++ b/pages/1788.html
@@ -346,20 +346,22 @@ margin-left: 0em;
 <path style="fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(100%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;" d="M 88.03075 0.0005 C 88.03075 1.648938 86.690906 2.988781 85.038562 2.988781 C 83.390125 2.988781 82.050281 1.648938 82.050281 0.0005 C 82.050281 -1.651844 83.390125 -2.987781 85.038562 -2.987781 C 86.690906 -2.987781 88.03075 -1.651844 88.03075 0.0005 Z M 88.03075 0.0005 " transform="matrix(1,0,0,-1,3.188,3.188)"></path>
 </g>
 </g>
-</svg></body></html>
+</svg>
+<p>\begin{tikzcd} A \ar[r] &amp; B \end{tikzcd}</p>
+</body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 29, 2018 at 19:36:54.
+  Last revised on December 29, 2018 at 22:31:40.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1738" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1738 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1739" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1739 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
