--- a/pages/19844.html
+++ b/pages/19844.html
@@ -415,6 +415,22 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p><strong><a class="existingWikiWord" href="/nlab/show/solitons">solitons</a></strong></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/caloron">caloron</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Skyrmion">Skyrmion</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/instanton">instanton</a></p>
+</li>
+</ul>
+
 <p><strong><a class="existingWikiWord" href="/nlab/show/MSSM">minimally extended supersymmetric standard model</a></strong></p>
 
 <p><strong><a class="existingWikiWord" href="/nlab/show/superpartners">superpartners</a></strong></p>
@@ -1091,11 +1107,27 @@ margin-left: 0em;
 
 <h2 id="References">References</h2>
 
+<p>Measurements include</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/LHC">LHCb collaboration</a>, <em>Differential branching fractions and isospin asymmetries of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mo>→</mo><msup><mi>K</mi> <mrow><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow></msup><msup><mi>μ</mi> <mo>+</mo></msup><msup><mi>μ</mi> <mo>−</mo></msup></mrow><annotation encoding="application/x-tex">B \to K^{(\ast)}\mu^+ \mu^-</annotation></semantics></math> decays</em>, JHEP 06 (2014) 133 (<a href="https://arxiv.org/abs/1403.8044">arXiv:1403.8044</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/LHC">LHCb collaboration</a>, <em>Angular analysis and differential branching fraction of the decay <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msubsup><mi>B</mi> <mi>s</mi> <mn>0</mn></msubsup><mo>→</mo><mi>ϕ</mi><msup><mi>μ</mi> <mo>+</mo></msup><msup><mi>μ</mi> <mo>−</mo></msup></mrow><annotation encoding="application/x-tex">B^0_s \to \phi \mu^+ \mu^-</annotation></semantics></math></em>, JHEP09(2015)179 (<a href="https://arxiv.org/abs/1506.08777">arXivL1506.08777</a>)</p>
+</li>
+</ul>
+
 <p>Review includes</p>
 
 <ul>
 <li>
-<p>Elena Graverini, <em>Flavour anomalies: a review</em> (<a href="https://arxiv.org/abs/1807.11373">arXiv:1807.11373</a>)</p>
+<p>Elena Graverini, <em>Flavour anomalies: a review</em>, in <em>Proceedings of the <a href="http://inspirehep.net/record/1621649">13th International Conference on Beauty, Charm and Hyperon hadrons (BEACH 2018)</a></em> (<a href="https://arxiv.org/abs/1807.11373">arXiv:1807.11373</a>)</p>
+</li>
+
+<li id="Guadagnoli17">
+<p>Diego Guadagnoli, <em>Flavour anomalies on the eve of the Run-2 verdict</em>, Modern Physics Letters AVol. 32, No. 07, 1730006 (2017) (<a href="https://arxiv.org/abs/1703.02804">arXiv:1703.02804</a>)</p>
 </li>
 
 <li>
@@ -1172,14 +1204,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  3, 2018 at 07:24:34.
+  Last revised on December 30, 2018 at 00:59:42.
   See the <a href="https://ncatlab.org/nlab/history/flavour anomaly" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/flavour+anomaly" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/flavour+anomaly/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/flavour+anomaly" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/flavour+anomaly" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/flavour+anomaly" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/flavour+anomaly/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/flavour+anomaly" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/flavour+anomaly" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/flavour anomaly/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
