--- a/pages/19960.html
+++ b/pages/19960.html
@@ -910,6 +910,7 @@ margin-left: 0em;
 <li><a href='#TopDownModels'>Top-down: Sakai-Sugimoto model</a></li>
 <li><a href='#BottomUpModels'>Bottom-up models</a></li>
 </ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
@@ -1038,6 +1039,22 @@ margin-left: 0em;
 </blockquote>
 
 <p>These computations shown so far all use just the field theory in the bulk, not yet the stringy modes (<a class="existingWikiWord" href="/nlab/show/limit+of+a+sequence">limit</a> of vanishing <a class="existingWikiWord" href="/nlab/show/string+length">string length</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msqrt><mrow><mi>α</mi><mo>′</mo></mrow></msqrt><mo>→</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">\sqrt{\alpha'} \to 0</annotation></semantics></math>). Incorporating bulk string corrections further improves these results, see <a href="#SonnenscheinWeissman18">Sonnenschein-Weissman 18</a>.</p>
+
+<h2 id="related_concepts">Related concepts</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/holographic+entanglement+entropy">holographic entanglement entropy</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/AdS-CFT+in+condensed+matter+physics">AdS-CFT in condensed matter physics</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a></p>
+</li>
+</ul>
 
 <h2 id="references">References</h2>
 
@@ -1376,14 +1393,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 29, 2018 at 18:17:11.
+  Last revised on December 30, 2018 at 09:39:25.
   See the <a href="https://ncatlab.org/nlab/history/AdS-QCD correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AdS-QCD+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-QCD+correspondence/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/AdS-QCD+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-QCD+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AdS-QCD+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-QCD+correspondence/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/AdS-QCD+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-QCD+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/AdS-QCD correspondence/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
