--- a/pages/10022.html
+++ b/pages/10022.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -329,7 +334,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -881,15 +892,23 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="measure_and_probability_theory">Measure and probability theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/measure+theory">measure theory</a></strong></p><p><strong><a class="existingWikiWord" href="/nlab/show/probability+theory">probability theory</a></strong></p><h2 id="measure_theory">Measure theory</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/measure+theory">measure theory</a></strong></p>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/probability+theory">probability theory</a></strong></p>
+
+<h2 id="measure_theory">Measure theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/measurable+space">measurable space</a>, <a class="existingWikiWord" href="/nlab/show/measurable+locale">measurable locale</a></p>
 </li>
@@ -905,7 +924,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/geometric+measure+theory">geometric measure theory</a></p>
 </li>
-</ul><h2 id="probability_theory">Probability theory</h2><ul>
+</ul>
+
+<h2 id="probability_theory">Probability theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/probability+space">probability space</a></p>
 </li>
@@ -935,7 +958,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/entropy">entropy</a>, <a class="existingWikiWord" href="/nlab/show/relative+entropy">relative entropy</a></p>
 </li>
-</ul><h2 id="information_geometry">Information geometry</h2><ul>
+</ul>
+
+<h2 id="information_geometry">Information geometry</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/information+geometry">information geometry</a></p>
 </li>
@@ -947,7 +974,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Wasserstein+metric">Wasserstein metric</a></p>
 </li>
-</ul><h2 id="thermodynamics">Thermodynamics</h2><ul>
+</ul>
+
+<h2 id="thermodynamics">Thermodynamics</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/thermodynamics">thermodynamics</a></p>
 </li>
@@ -959,25 +990,56 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/ergodic+theory">ergodic theory</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/Riesz+representation+theorem">Riesz representation theorem</a></li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/measure+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#References">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#References'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
-<p>The notion of <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> for horizons in the context of the <a class="existingWikiWord" href="/nlab/show/holographic+principle">holographic principle</a> and specifically in the <a class="existingWikiWord" href="/nlab/show/AdS-CFT+correspondence">AdS-CFT correspondence</a>.</p>
+<p>For <a class="existingWikiWord" href="/nlab/show/quantum+field+theories">quantum field theories</a> that are exhibited as <a class="existingWikiWord" href="/nlab/show/boundary+field+theories">boundary field theories</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> of an approximately <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a> via some approximation to <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> (for instance for <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> via <a class="existingWikiWord" href="/nlab/show/AdS-QCD+duality">AdS-QCD duality</a>) their <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> of a given <a class="existingWikiWord" href="/nlab/show/bounded+set">bounded domain</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mo>⊂</mo><mi>A</mi></mrow><annotation encoding="application/x-tex">B\subset A</annotation></semantics></math> turns out to be proportional to the <a class="existingWikiWord" href="/nlab/show/area">area</a> of the minimal-area <a class="existingWikiWord" href="/nlab/show/surface">surface</a> inside the <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> spacetime that has the same <a class="existingWikiWord" href="/nlab/show/boundary">boundary</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∂</mo><mi>B</mi></mrow><annotation encoding="application/x-tex">\partial B</annotation></semantics></math> (see <a href="#NishiokaRyuTakayanagi09">Nishioka-Ryu-Takayanagi 09 (3.3)</a> for review of the formula and <a href="#LewkowyczMaldacena13">Lewkowycz-Maldacena 13</a> for a conceptual explanation).</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/RyuTakayanagiFormula.jpg" width="400" /></center>
+<blockquote>
+<p>graphics grabbed from <a href="#NishiokaRyuTakayanagi09">Nishioka-Ryu-Takayanagi 09</a></p>
+</blockquote>
 
-<p>The correct statement of this relation turns out to be that quantum corrections to the <a class="existingWikiWord" href="/nlab/show/black+hole+entropy">black hole entropy</a> in the presence of matter fields is equal to the entanglement entropy. (<a href="#RyuTakayanagi06">Ryu-Takayanagi 06, p. 13</a>)</p>
+<p>This relation is known as the <em>Ryu-Takayanagi formula</em> (<a href="#RyuTakayanagi06a">Ryu-Takayanagi 06a</a>, <a href="#RyuTakayanagi06b">Ryu-Takayanagi 06b</a>) for holographic computation of entabglement entropy, or <em>holographic entanglement entropy</em>, for short.</p>
 
-<p>(…)</p>
+<p>This is a generalization of the proportionality of <a class="existingWikiWord" href="/nlab/show/black+hole+entropy">black hole entropy</a> to the area of its <a class="existingWikiWord" href="/nlab/show/event+horizon">event horizon</a>. Indeed, <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> applies to the <a class="existingWikiWord" href="/nlab/show/near+horizon+geometry">near horizon geometry</a> of <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a>, the higher-dimensional generalizations of <a class="existingWikiWord" href="/nlab/show/black+holes">black holes</a> and reduces 4d black holes under suitable <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactification</a> (see also at <em><a class="existingWikiWord" href="/nlab/show/black+holes+in+string+theory">black holes in string theory</a></em>)</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/RyuTakayanagiBlackHoleEntropy.jpg" width="500" /></center>
+<blockquote>
+<p>graphics grabbed from <a href="#NishiokaRyuTakayanagi09">Nishioka-Ryu-Takayanagi 09</a></p>
+</blockquote>
+
+<p>In fact quantum corrections to the <a class="existingWikiWord" href="/nlab/show/black+hole+entropy">black hole entropy</a> in the presence of matter fields is equal to the <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a>. (<a href="#RyuTakayanagi06a">Ryu-Takayanagi 06a, p. 13</a>)</p>
+
+<p>Various properties of <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> find immediate geometric interpretations this way, for instance subadditivity</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/RyuTakayanagiSubadditivity.jpg" width="500" /></center>
+<blockquote>
+<p>graphics grabbed from <a href="#NishiokaRyuTakayanagi09">Nishioka-Ryu-Takayanagi 09</a></p>
+</blockquote>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -1007,28 +1069,28 @@ margin-left: 0em;
 
 <h2 id="References">References</h2>
 
-<p>The original article is</p>
+<p>The original article are</p>
 
 <ul>
-<li id="RyuTakayanagi06"><a class="existingWikiWord" href="/nlab/show/Shinsei+Ryu">Shinsei Ryu</a>, <a class="existingWikiWord" href="/nlab/show/Tadashi+Takayanagi">Tadashi Takayanagi</a>, <em>Holographic Derivation of Entanglement Entropy from AdS/CFT</em>, Phys. Rev. Lett. 96:181602, 2006 (<a href="https://arxiv.org/abs/hep-th/0603001">arXiv:hep-th/0603001</a>)</li>
+<li id="RyuTakayanagi06a">
+<p><a class="existingWikiWord" href="/nlab/show/Shinsei+Ryu">Shinsei Ryu</a>, <a class="existingWikiWord" href="/nlab/show/Tadashi+Takayanagi">Tadashi Takayanagi</a>, <em>Holographic Derivation of Entanglement Entropy from AdS/CFT</em>, Phys. Rev. Lett. 96:181602, 2006 (<a href="https://arxiv.org/abs/hep-th/0603001">arXiv:hep-th/0603001</a>)</p>
+</li>
+
+<li id="RyuTakayanagi06a">
+<p><a class="existingWikiWord" href="/nlab/show/Shinsei+Ryu">Shinsei Ryu</a>, <a class="existingWikiWord" href="/nlab/show/Tadashi+Takayanagi">Tadashi Takayanagi</a>, <em>Aspects of Holographic Entanglement Entropy</em>, JHEP 0608:045, 2006 (<a href="https://arxiv.org/abs/hep-th/0605073">arXiv:hep-th/0605073</a>)</p>
+</li>
 </ul>
 
 <p>A proposal for a conceptual explanation is made in</p>
 
 <ul>
-<li>Aitor Lewkowycz, <a class="existingWikiWord" href="/nlab/show/Juan+Maldacena">Juan Maldacena</a>, <em>Generalized gravitational entropy</em>, J. High Energ. Phys. (2013) 2013: 90 (<a href="https://arxiv.org/abs/1304.4926">arXiv:1304.4926</a>)</li>
+<li id="LewkowyczMaldacena13">Aitor Lewkowycz, <a class="existingWikiWord" href="/nlab/show/Juan+Maldacena">Juan Maldacena</a>, <em>Generalized gravitational entropy</em>, J. High Energ. Phys. (2013) 2013: 90 (<a href="https://arxiv.org/abs/1304.4926">arXiv:1304.4926</a>)</li>
 </ul>
 
 <p>Review is in</p>
 
 <ul>
-<li>
-<p>Tatsuma Nishioka, <a class="existingWikiWord" href="/nlab/show/Shinsei+Ryu">Shinsei Ryu</a>, <a class="existingWikiWord" href="/nlab/show/Tadashi+Takayanagi">Tadashi Takayanagi</a>, <em>Holographic Entanglement Entropy: An Overview</em>, J.Phys.A42:504008,2009 (<a href="http://jp.arxiv.org/abs/0905.0932">arXiv:0905.0932</a>)</p>
-</li>
-
-<li id="Harlow18">
-<p><a class="existingWikiWord" href="/nlab/show/Daniel+Harlow">Daniel Harlow</a>, <em>TASI Lectures on the Emergence of Bulk Physics in AdS/CFT</em> (<a href="https://arxiv.org/abs/1802.01040">arXiv:1802.01040</a>)</p>
-</li>
+<li id="NishiokaRyuTakayanagi09">Tatsuma Nishioka, <a class="existingWikiWord" href="/nlab/show/Shinsei+Ryu">Shinsei Ryu</a>, <a class="existingWikiWord" href="/nlab/show/Tadashi+Takayanagi">Tadashi Takayanagi</a>, <em>Holographic Entanglement Entropy: An Overview</em>, J.Phys.A42:504008,2009 (<a href="https://arxiv.org/abs/0905.0932">arXiv:0905.0932</a>)</li>
 </ul>
 
 <p>Survey talks include</p>
@@ -1058,21 +1120,27 @@ margin-left: 0em;
 <p>An influential argument that this relation implies that <a class="existingWikiWord" href="/nlab/show/entanglement">entanglement</a> in the boundary theory is what makes spacetime as such appear in the bulk theory is due to</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Mark+Van+Raamsdonk">Mark Van Raamsdonk</a>, <em>Building up spacetime with quantum entanglement</em>, Gen.Rel.Grav.42:2323-2329,2010; Int.J.Mod.Phys.D19:2429-2435,2010 (<a href="https://arxiv.org/abs/1005.3035">arXiv:1005.3035</a>)</li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Mark+Van+Raamsdonk">Mark Van Raamsdonk</a>, <em>Building up spacetime with quantum entanglement</em>, Gen.Rel.Grav.42:2323-2329,2010; Int.J.Mod.Phys.D19:2429-2435,2010 (<a href="https://arxiv.org/abs/1005.3035">arXiv:1005.3035</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Mark+Van+Raamsdonk">Mark Van Raamsdonk</a>, <em>Building up spacetime with quantum entanglement II: It from BC-bit</em> (<a href="https://arxiv.org/abs/1809.01197">arXiv:1809.01197</a>)</p>
+</li>
 </ul>
 
 <p>Review is in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Mark+Van+Raamsdonk">Mark Van Raamsdonk</a>, <em>Lectures on Gravity and Entanglement</em>, chapter 5 in New Frontiers in Fields and Strings
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Mark+Van+Raamsdonk">Mark Van Raamsdonk</a>, <em>Lectures on Gravity and Entanglement</em>, chapter 5 in New Frontiers in Fields and Strings</p>
+
 <p>TASI 2015 Proceedings of the 2015 Theoretical Advanced Study Institute in Elementary Particle Physics 2015 Theoretical Advanced Study Institute in Elementary Particle Physics (<a href="https://arxiv.org/abs/1609.00026">arXiv:1609.00026</a>)</p>
 </li>
-</ul>
 
-<p>A followup is</p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/Mark+Van+Raamsdonk">Mark Van Raamsdonk</a>, <em>Building up spacetime with quantum entanglement II: It from BC-bit</em> (<a href="https://arxiv.org/abs/1809.01197">arXiv:1809.01197</a>)</li>
+<li id="Harlow18">
+<p><a class="existingWikiWord" href="/nlab/show/Daniel+Harlow">Daniel Harlow</a>, <em>TASI Lectures on the Emergence of Bulk Physics in AdS/CFT</em> (<a href="https://arxiv.org/abs/1802.01040">arXiv:1802.01040</a>)</p>
+</li>
 </ul>
 
 <p>Computation of <a class="existingWikiWord" href="/nlab/show/black+hole+entropy">black hole entropy</a> in 4d via <a class="existingWikiWord" href="/nlab/show/AdS4-CFT3+duality">AdS4-CFT3 duality</a> from <a class="existingWikiWord" href="/nlab/show/holographic+entanglement+entropy">holographic entanglement entropy</a> in the <a class="existingWikiWord" href="/nlab/show/ABJM+theory">ABJM theory</a> for the <a class="existingWikiWord" href="/nlab/show/M2-brane">M2-brane</a> is discussed in</p>
@@ -1086,14 +1154,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  6, 2018 at 11:43:02.
+  Last revised on December 30, 2018 at 09:57:11.
   See the <a href="https://ncatlab.org/nlab/history/holographic entanglement entropy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/holographic+entanglement+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/holographic+entanglement+entropy/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/holographic+entanglement+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/holographic+entanglement+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/holographic+entanglement+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/holographic+entanglement+entropy/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/holographic+entanglement+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/holographic+entanglement+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/holographic entanglement entropy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
