--- a/pages/16971.html
+++ b/pages/16971.html
@@ -317,11 +317,25 @@ margin-left: 0em;
 
 <h4 id="stable_homotopy_theory">Stable Homotopy theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a></strong></p><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a></strong></p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/homological+algebra">homological algebra</a>, <a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></li>
-</ul><p><em><a class="existingWikiWord" href="/nlab/show/Introduction+to+Stable+Homotopy+Theory">Introduction</a></em></p><h1 id="ingredients">Ingredients</h1><ul>
+</ul>
+
+<p><em><a class="existingWikiWord" href="/nlab/show/Introduction+to+Stable+Homotopy+Theory">Introduction</a></em></p>
+
+<h1 id="ingredients">Ingredients</h1>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a></li>
-</ul><h1 id="contents">Contents</h1><ul>
+</ul>
+
+<h1 id="contents">Contents</h1>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/loop+space+object">loop space object</a></p>
 </li>
@@ -391,15 +405,32 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
-<p><a href="/nlab/edit/stable+homotopy+theory+-+contents">Edit this sidebar</a></p>
-</div></div>
+</ul>
+<div>
+<p>
+  <a href="/nlab/edit/stable+homotopy+theory+-+contents">Edit this sidebar</a>
+</p>
+</div></div></div>
 
 <h4 id="representation_theory">Representation theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a></strong></p><p><strong><a class="existingWikiWord" href="/nlab/show/geometric+representation+theory">geometric representation theory</a></strong></p><h2 id="ingredients">Ingredients</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a></strong></p>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/geometric+representation+theory">geometric representation theory</a></strong></p>
+
+<h2 id="ingredients">Ingredients</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/linear+algebra">linear algebra</a>, <a class="existingWikiWord" href="/nlab/show/algebra">algebra</a>, <a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></li>
-</ul><h2 id="definitions">Definitions</h2><p><a class="existingWikiWord" href="/nlab/show/representation">representation</a>, <a class="existingWikiWord" href="/nlab/show/2-representation">2-representation</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-representation">∞-representation</a></p><ul>
+</ul>
+
+<h2 id="definitions">Definitions</h2>
+
+<p><a class="existingWikiWord" href="/nlab/show/representation">representation</a>, <a class="existingWikiWord" href="/nlab/show/2-representation">2-representation</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-representation">∞-representation</a></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/group">group</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">∞-group</a></p>
 </li>
@@ -455,7 +486,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/module+algebra">module algebra</a>, <a class="existingWikiWord" href="/nlab/show/comodule+algebra">comodule algebra</a>, <a class="existingWikiWord" href="/nlab/show/Hopf+action">Hopf action</a>, <a class="existingWikiWord" href="/nlab/show/measuring">measuring</a></p>
 </li>
-</ul><h2 id="geometric_representation_theory">Geometric representation theory</h2><ul>
+</ul>
+
+<h2 id="geometric_representation_theory">Geometric representation theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/D-module">D-module</a>, <a class="existingWikiWord" href="/nlab/show/perverse+sheaf">perverse sheaf</a>,</p>
 </li>
@@ -479,7 +514,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/reconstruction+theorems">reconstruction theorems</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Borel-Weil-Bott+theorem">Borel-Weil-Bott theorem</a></p>
 </li>
@@ -495,17 +534,33 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/BBDG+decomposition+theorem">BBDG decomposition theorem</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p><a href="/nlab/edit/representation+theory+-+contents">Edit this sidebar</a></p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#properties">Properties</a><ul><li><a href="#relation_to_equivariant_homotopy_groups">Relation to equivariant homotopy groups</a></li></ul></li><li><a href="#examples">Examples</a><ul><li><a href="#for_equivariant_suspension_spectra">For equivariant suspension spectra</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#relation_to_equivariant_homotopy_groups'>Relation to equivariant homotopy groups</a></li>
+</ul>
+<li><a href='#examples'>Examples</a></li>
+<ul>
+<li><a href='#for_equivariant_suspension_spectra'>For equivariant suspension spectra</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
-<p>Given a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+spectrum">equivariant spectrum</a>, its <em>fixed point spectrum</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>F</mi> <mi>G</mi></msup><mi>X</mi></mrow><annotation encoding="application/x-tex">F^G X</annotation></semantics></math> is the plain <a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a> which is value of the <a class="existingWikiWord" href="/nlab/show/derived+functor">derived functor</a> of the naive <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/fixed+point">fixed point</a> functor on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>. This constitutes a suitably derived functor</p>
+<p>Given a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+spectrum">equivariant spectrum</a>, its <em>fixed point spectrum</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>F</mi> <mi>G</mi></msup><mi>X</mi></mrow><annotation encoding="application/x-tex">F^G X</annotation></semantics></math> is the plain <a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a> which is the value of the <a class="existingWikiWord" href="/nlab/show/derived+functor">derived functor</a> of the naive <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/fixed+point">fixed point</a> functor on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>. This constitutes a suitably derived functor</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>F</mi> <mi>G</mi></msup><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>G</mi><mi>Spectra</mi><mo>⟶</mo><mi>Spectra</mi></mrow><annotation encoding="application/x-tex">
   F^G \;\colon\; G Spectra \longrightarrow Spectra
 
@@ -602,14 +657,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 18, 2018 at 04:30:36.
+  Last revised on December 30, 2018 at 13:27:21.
   See the <a href="https://ncatlab.org/nlab/history/fixed point spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fixed+point+spectrum/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fixed+point+spectrum/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fixed point spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
