--- a/pages/2626.html
+++ b/pages/2626.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -318,6 +318,7 @@ margin-left: 0em;
 <h4 id="knot_theory">Knot theory</h4>
 
 <div class="hide"><div>
+
 <ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/knot">knot</a></strong>, <strong><a class="existingWikiWord" href="/nlab/show/link">link</a></strong></p>
@@ -397,13 +398,29 @@ margin-left: 0em;
 <p>Related concepts</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/singular+knot">singular knot</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/singular+knot">singular knot</a></p>
+</li>
 
-<li><a class="existingWikiWord" href="/nlab/show/Vassiliev+skein+relation">Vassiliev skein relation</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Vassiliev+skein+relation">Vassiliev skein relation</a></p>
+</li>
 
-<li><a class="existingWikiWord" href="/nlab/show/Seifert+surface">Seifert surface</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Seifert+surface">Seifert surface</a></p>
+</li>
 
-<li><a class="existingWikiWord" href="/nlab/show/virtual+knot+theory">virtual knot theory</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/virtual+knot+theory">virtual knot theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Dehn+surgery">Dehn surgery</a>, <a class="existingWikiWord" href="/nlab/show/Kirby+calculus">Kirby calculus</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/volume+conjecture">volume conjecture</a></p>
+</li>
 </ul>
 </li>
 </ul>
@@ -1114,6 +1131,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/Kirby+calculus">Kirby calculus</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/Wilson+loop">Wilson loop</a></p>
 </li>
 </ul>
@@ -1193,14 +1214,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 28, 2018 at 06:15:36.
+  Last revised on December 30, 2018 at 13:13:55.
   See the <a href="https://ncatlab.org/nlab/history/knot" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/knot" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/knot/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/knot" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/knot" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/knot" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/knot/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/knot" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/knot" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/knot/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
